# Primitives

./: Cargo.toml  README.md
benches/: primitives.rs
src/: aliases.rs  lib.rs
src/bits/: address.rs  fixed.rs  function.rs  mod.rs
src/bytes/: mod.rs  rlp.rs  serde.rs
src/signature/: mod.rs  parity.rs  sig.rs  utils.rs
src/signed/: utils.rs
