[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = "0.3.8"
bytes = "1.7.2"
const-hex = "1.12.0"
derive_more = {version = "1.0.0", features = ["full"]}
hex = "0.4"
hex-literal = "0.4.1"
keccak-asm = "0.1.4"
ruint = "1.12.3"

[features]
arbitrary = []
allocative = []
