[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = "0.3.8"
bincode = "1.3.3"
bytes = "1.7.2"
derive_more = {version = "1.0.0", features = ["full"]}
hex = { package = "const-hex", version = "1.10", default-features = false, features = [
    "alloc",
] }
hex-literal = "0.4.1"
keccak-asm = "0.1.4"
ruint = "1.12.3"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"

[features]
arbitrary = []
allocative = []
